2001-08-21  Max Horn <max@quendi.de>
	* audio/Midi.cc: enabled MIDI driver on OS X
	* audio/midi_drivers/mac_midi.* enabled MIDI driver on OS X
	
2001-08-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed Gwenno bug. (also accept NPCnums < 0x80 for bodies)
	* contain.cc: fixed infinite-volume containers (eg. hollow tree)

2001-08-20  Max Horn <max@quendi.de>
	* exult.cc: disabled mouse clicks during dont_move mode
	* gamerend.cc: disabled gump rendering during dont_move mode
	* gamewin.*: fixed Game_window destructor to not crash anymore;
	  added main_actor_dont_move() method
	* keys.cc, mouse.cc: now uses main_actor_dont_move()
	* menulist.cc: enabled Cmd-Q quit command for OS X, too
	* sigame.cc: quick fix to lessen the palette issues a bit; real fix needed
	* macosx/SDLMain.m: reverted to basic SDL version of this file

2001-08-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: *_execute_uc_array return true (fixes bedroll bug)

2001-08-20  Max Horn <max@quendi.de>
	* mouse.cc: changed set_speed_cursor() to set hand cursor when in dont_move mode

2001-08-20  Ryan Nunn <triforce@merlin.net.au>
	* cheat_screen.cc/.h : Added 'Advanced' numerical NPC Flag editor.

2001-08-20  Ryan Nunn <triforce@merlin.net.au>
	* actorio.cc : Save and restore all 64 flags.
	* audio/midi_drivers/win_midiout.cc : Implimented fix for hung notes
	  (bug #449990)
	* shapes/shapevga.cc : fixed compiling error.

2001-08-20  Max Horn <max@quendi.de>
	* keys.cc: key handling during dont_move is now properly restricted;
	  each key Action now has a flag determing if it can be used during dont_move
	
2001-08-19  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.h,shapevga.cc:  Read in 'occludes.dat' & set
	occlude_flag in Shape_info.

2001-08-19  Max Horn <max@quendi.de>
	* exult.cc: no more "exception caught" upon a normal quite
	* keys.cc: no keys except for quit are handled when dont_move flag is set